# spoticord

./: Cargo.toml  Dockerfile
spoticord_audio/: Cargo.toml
src/: bot.rs  main.rs
src/commands/: mod.rs
src/commands/core/: link.rs  mod.rs
src/commands/music/: mod.rs  tone.rs
