# --- keep your top part the same ---
[dependencies]
spoticord_config = { path = "./spoticord_config" }
spoticord_database = { path = "./spoticord_database" }
spoticord_player = { path = "./spoticord_player" }
spoticord_session = { path = "./spoticord_session" }
spoticord_utils = { path = "./spoticord_utils" }
spoticord_stats = { path = "./spoticord_stats", optional = true }

librespot = { git = "https://github.com/SpoticordMusic/librespot.git", default-features = false }
anyhow = "1.0.93"
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
poise = "0.6.1"

# serenity 0.12 API used by tone.rs
serenity = { version = "0.12.2", default-features = false, features = [
  "client", "gateway", "model", "http", "cache", "rustls_backend"
] }

# songbird voice
songbird = { version = "0.4.4", features = ["simd-json"] }

tokio = { version = "1.41.1", features = ["full"] }
rustls = { version = "0.23.16", features = ["aws-lc-rs"] }
