[package]
name = "discord-tone-min"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.2", default-features = false, features = [
  "client", "gateway", "model", "http", "cache", "rustls_backend"
] }
songbird = { version = "0.4.4", features = ["simd-json"] }
tokio    = { version = "1.41.1", features = ["full"] }
anyhow   = "1.0.93"
dotenvy  = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
