[package]
name = "spoticord"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend", "framework"] }
songbird = { version = "0.4.4", features = ["serenity", "simd-json"] }
librespot = { version = "0.5", default-features = false }
dotenv = "0.15"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.10"
anyhow = "1"
once_cell = "1"

[workspace]
members = ["../spoticord_audio"]

[profile.release]
lto = true

