[package]
name = "spoticord_audio"
version = "0.1.0"
edition = "2021"

[dependencies]
librespot = { version = "0.5", default-features = false }
songbird = { version = "0.4.4", features = ["simd-json"] }
tokio = { version = "1.41.1", features = ["sync"], default-features = false }
zerocopy = "0.8.9"
